cmake_minimum_required(VERSION 2.8)
project(opencv)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_FLAGS "-std=c++11 -o3")
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(1.51 1.51.cpp)
add_executable(1.52 1.52.cpp)
add_executable(1.53 1.53.cpp)
add_executable(1.54 1.54.cpp)
add_executable(1.61 1.61.cpp)
add_executable(1.62 1.62.cpp)
add_executable(1.6 1.6.cpp)
add_executable(3.18 3.18.cpp)
add_executable(hunhe 3.19.cpp)
add_executable(Trackbr 3.21.cpp)
target_link_libraries(1.51 ${OpenCV_LIBS})
target_link_libraries(1.52 ${OpenCV_LIBS})
target_link_libraries(1.53 ${OpenCV_LIBS})
target_link_libraries(1.54 ${OpenCV_LIBS})
target_link_libraries(1.61 ${OpenCV_LIBS})
target_link_libraries(1.62 ${OpenCV_LIBS})
target_link_libraries(1.6 ${OpenCV_LIBS})
target_link_libraries(3.18 ${OpenCV_LIBS})
target_link_libraries(hunhe ${OpenCV_LIBS})
target_link_libraries(Trackbr ${OpenCV_LIBS})
#---------------------------------------------
add_executable(Mouse 3.3.cpp)
target_link_libraries(Mouse ${OpenCV_LIBS})
add_executable(split 5.31.cpp)
target_link_libraries(split ${OpenCV_LIBS})
add_executable(liangdu 5.43.cpp)
target_link_libraries(liangdu ${OpenCV_LIBS})